<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="uploading_captured_data">Uploading the captured data to analyze them…</string>
    <string name="processing_captured_data">Analyzing…</string>
    <string name="uploading_failed_hint">Uploading failed, check your internet connection and retry. If it happens repeatedly contact customer support.</string>
    <string name="graph_error_hint">Internal error occurred. Check your internet connection and retry. If it happens repeatedly contact customer support.</string>
    <string name="shared_pref">Smart_Spectra</string>
    <string name="checkup">CHECKUP</string>
    <string name="terms_of_services">Terms of service</string>
    <string name="instruction_of_use">Instruction of use</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact_us">Contact us</string>
    <string name="show_tutorial">Show tutorial</string>
    <string name="result_label_empty">No Results\n…</string>
    <string name="result_label">Breathing Rate : %1$s\nPulse Rate : %2$s</string>
    <string name="fps_label">FPS: %d</string>
    <string name="measurement_failed_hint">Your data was insufficient for an accurate measurement. Please move to a better-lit location, hold still, and try again. For more guidance, see the tutorial in the dropdown menu of the \'i\' icon next to \'Checkup.\'</string>
    <string name="loading_hint">Preparing…</string>
    <string name="camera_permission_hint">Metrics measurements require camera permission.</string>
    <string name="allow">Allow</string>
    <string name="open_settings">Open settings</string>
    <string name="retry">Retry</string>
    <string name="info_button_description">Show screening tips</string>
    <string name="navigation_hint_start">Tap to advance</string>
    <string name="navigation_hint_end">Tap to dismiss</string>
</resources>
